--- a/index.html
+++ b/index.html
@@ -1,13 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lightspark • Home Detail</title>
-  <!-- Full HTML content preserved exactly as provided -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Lightspark • Home Detail</title>
+
+<style>
+/* =======================
+   LIGHTSPARK HOME DETAIL
+   FULL PRODUCTION EXPORT
+   ======================= */
+
+:root{
+  --ls-blue:#3d20ae;
+  --ls-green:#3bf49c;
+  --ls-red:#ff5a5f;
+  --ls-yellow:#ffd645;
+  --bg:#f6f7fb;
+  --card:#ffffff;
+  --border:#e7ebf3;
+  --text:#111827;
+  --muted:#6b7280;
+  --radius:18px;
+  --shadow:0 14px 34px rgba(17,24,39,.08);
+}
+
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+  color:var(--text);
+  background:
+    radial-gradient(1200px 600px at 15% -10%, rgba(255,90,95,.18), transparent 55%),
+    radial-gradient(1200px 600px at 85% -10%, rgba(59,244,156,.16), transparent 55%),
+    linear-gradient(180deg,#fff 0%,var(--bg) 45%);
+}
+
+.wrap{max-width:1180px;margin:0 auto;padding:24px}
+
+header{
+  position:sticky;top:0;z-index:10;
+  backdrop-filter:blur(10px);
+  background:rgba(246,247,251,.85);
+  border-bottom:1px solid var(--border);
+}
+
+.header-inner{
+  max-width:1180px;margin:0 auto;
+  padding:14px 24px;
+  display:flex;align-items:center;justify-content:space-between;
+}
+
+.brand{display:flex;align-items:center;gap:10px}
+.logo{
+  width:38px;height:38px;border-radius:50%;
+  background:conic-gradient(var(--ls-green),#66d8ff,var(--ls-blue),var(--ls-red),var(--ls-yellow),var(--ls-green));
+}
+
+h1{margin:0;font-size:16px}
+
+.pill{
+  padding:8px 12px;border-radius:999px;
+  border:1px solid var(--border);
+  background:#fff;font-size:12px;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns:1.1fr .9fr;
+  gap:20px;
+  margin-top:24px;
+}
+
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  padding:18px;
+}
+
+.card h2{
+  margin:0 0 10px;
+  font-size:14px;
+  text-transform:uppercase;
+  letter-spacing:.12em;
+  color:#6b7280;
+}
+
+.address h3{margin:0;font-size:20px}
+.meta{font-size:12px;color:var(--muted)}
+
+.score{
+  display:flex;align-items:center;gap:12px;margin-top:10px
+}
+.score strong{font-size:20px}
+
+.scale{
+  margin-top:10px;height:10px;border-radius:999px;
+  background:linear-gradient(90deg,var(--ls-red),var(--ls-yellow),var(--ls-green));
+  position:relative;
+}
+.marker{
+  position:absolute;top:50%;transform:translate(-50%,-50%);
+  width:14px;height:14px;border-radius:50%;
+  background:#111;border:2px solid #fff;
+}
+
+.kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
+.kpi{border:1px solid var(--border);border-radius:14px;padding:12px}
+
+.money{font-size:26px;font-weight:800}
+.small{font-size:12px;color:var(--muted)}
+
+.bundle{border:1px solid var(--border);border-radius:14px;padding:12px;margin-top:10px}
+.bundle h4{margin:0}
+.price{font-weight:800}
+
+footer{text-align:center;font-size:11px;color:#9aa3b2;margin:20px}
+@media(max-width:980px){.grid{grid-template-columns:1fr}}
+</style>
 </head>
+
 <body>
-  <p>This file contains the full Lightspark Home Detail HTML export.</p>
-  <p>Use the version provided in chat if you need the complete styled layout.</p>
+
+<header>
+  <div class="header-inner">
+    <div class="brand">
+      <div class="logo"></div>
+      <div>
+        <strong>Lightspark</strong><br>
+        <small class="small">Home Insights Navigator</small>
+      </div>
+    </div>
+    <h1>Home Detail</h1>
+    <div class="pill">Homeowner Energy Report • Demo</div>
+  </div>
+</header>
+
+<div class="wrap">
+  <div class="grid">
+
+    <!-- LEFT COLUMN -->
+    <div>
+      <div class="card">
+        <h2>Property Overview</h2>
+        <div class="address">
+          <h3>1234 Main Street</h3>
+          <div class="meta">Vancouver, BC • Detached • 2 storeys + basement</div>
+        </div>
+
+        <div class="score">
+          <strong>72 / 100</strong>
+          <span class="pill">FAIR</span>
+        </div>
+        <div class="scale">
+          <div class="marker" style="left:72%"></div>
+        </div>
+
+        <p class="small" style="margin-top:10px">
+          Higher-than-average energy use, moderate climate risk, strong upgrade potential.
+        </p>
+      </div>
+
+      <div class="card" style="margin-top:18px">
+        <h2>Home Details</h2>
+        <ul class="small">
+          <li>Heating: Gas forced-air furnace</li>
+          <li>Cooling: None</li>
+          <li>Hot water: Gas storage tank</li>
+          <li>Windows: Mixed single / double pane</li>
+          <li>Attic insulation: Below recommended</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- RIGHT COLUMN -->
+    <div>
+      <div class="card">
+        <h2>Your Energy Scores Today</h2>
+        <div class="kpis">
+          <div class="kpi">
+            <strong>Lightspark</strong><br>75 / 100<br>
+            <small class="small">After upgrades: 90</small>
+          </div>
+          <div class="kpi">
+            <strong>Energy Use</strong><br>232 GJ / yr<br>
+            <small class="small">After: 190</small>
+          </div>
+          <div class="kpi">
+            <strong>Carbon</strong><br>12 tCO₂e / yr<br>
+            <small class="small">After: 8</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" style="margin-top:18px">
+        <h2>Energy Costs & Savings</h2>
+        <div class="money">$6,000 / year</div>
+        <div class="small">10-year savings: $8,600</div>
+      </div>
+
+      <div class="card" style="margin-top:18px">
+        <h2>Upgrade Bundles</h2>
+
+        <div class="bundle">
+          <h4>Bundle A — Comfort starter</h4>
+          <div class="price">$21,000</div>
+        </div>
+
+        <div class="bundle">
+          <h4>Bundle B — Whole-home upgrade</h4>
+          <div class="price">$32,000</div>
+        </div>
+
+        <div class="bundle">
+          <h4>Bundle C — Deep retrofit</h4>
+          <div class="price">$58,000</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<footer>Lightspark Home Insights Navigator • Demo data only</footer>
+
 </body>
 </html>
